--- a/todolist-server/package.json
+++ b/todolist-server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "nodemon ./dist/index.js",
     "watch": "tsc -w",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
   },
   "repository": {
     "type": "git",
@@ -20,12 +21,22 @@
   },
   "homepage": "https://github.com/hardco2020/Redux_Nextjs_Todolist#readme",
   "devDependencies": {
+    "@types/connect-redis": "^0.0.17",
+    "@types/cors": "^2.8.12",
+    "@types/express-session": "^1.17.4",
     "@types/node": "^16.7.1",
+    "@types/redis": "^2.8.31",
     "nodemon": "^2.0.12",
     "typescript": "^4.3.5"
   },
   "dependencies": {
     "@types/express": "^4.17.13",
-    "express": "^4.17.1"
+    "connect-redis": "^6.0.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "express-session": "^1.17.2",
+    "pg": "^8.7.1",
+    "redis": "^3.1.2",
+    "typeorm": "^0.2.37"
   }
 }
