--- a/todolist-web/my-app/package.json
+++ b/todolist-web/my-app/package.json
@@ -13,14 +13,22 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
+    "@types/js-cookie": "^2.2.7",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "axios": "^0.21.4",
     "date-fns": "^2.23.0",
     "formik": "^2.2.9",
+    "i18next": "^20.6.0",
+    "i18next-browser-languagedetector": "^6.1.2",
+    "i18next-http-backend": "^1.3.0",
+    "js-cookie": "^3.0.1",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.11.4",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
