--- a/todolist-server/package.json
+++ b/todolist-server/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon ./dist/index.js",
     "watch": "tsc -w",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
+    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
