--- a/todolist-web/my-app/package.json
+++ b/todolist-web/my-app/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.8",
     "axios": "^0.21.4",
     "date-fns": "^2.23.0",
     "formik": "^2.2.9",
@@ -60,7 +61,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "@types/react-router-dom": "^5.1.8"
-  }
+  "devDependencies": {}
 }
