fix business logic bug

--- a/todolist-server/.env
+++ b/todolist-server/.env
@@ -1,4 +1,5 @@
-SERVER_IP = postgres
+SERVER_IP = 5.181.217.243
 DATABASE = todo
-DATABASE_USER = postgres
+DATABASE_USER = kai
 DATABASE_PASSWORD = 12345
+PORT = 3001
