--- a/todolist-server/package.json
+++ b/todolist-server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon ./dist/index.js",
+    "dev": "nodemon ./dist/src/index.js",
     "watch": "tsc -w",
     "test": "echo \"Error: no test specified\" && exit 1",
     "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
